--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         go-version: 1.22
 
     - name: Build
-      run: go build -o go-web-app
+      run: go build -o go-web-app .
 
     - name: Test
       run: go test ./...
@@ -83,7 +83,8 @@ jobs:
 
     - name: Update tag in Helm chart
       run: |
-        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
+        sed -i "s/tag: .*/tag: \"${{ github.run_id }}\"/" helm/go-web-app-chart/values.yaml
+
 
     - name: Commit and push changes
       run: |
@@ -91,4 +92,4 @@ jobs:
         git config --global user.name "Nibras-S"
         git add helm/go-web-app-chart/values.yaml
         git commit -m "Update tag in Helm chart"
-        git push
+        git push https://x-access-token:${{ secrets.TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
